# hungry-mammoth

./: Cargo.toml  Makefile
client/: .gitignore  package-lock.json  package.json
client/src/__tests__/: client.ts
server/: .gitignore  Cargo.toml  dev.env  docker-compose.yml  rustfmt.toml
server/.sqlx/: query-248b18ce7c94e34c62b4ce95ee046ebcf1a881d875b187d663f97d433d7b59e2.json  query-2bd4df65eea53d1d73bdfd2de9ed181623080e6fc0b62a43fc03c672143492e1.json  query-485e2fbe698dbc28b30cfdffa346ea318adc3096cf83c25f1e755c212a55afb0.json  query-48925a800c8cb43ed11f32b9e83aeab472389f27342212f2ca685c3b2c60abdb.json  query-5cb994ea0225d336cd548b67575947ed162ee6b91c80721069b9ec26e2a9da60.json  query-5fa7d1d4d3914c35d2ab0227de91f88c539b3c897b7fc01c7d3fc12cbc85a133.json  query-78a0064c3b3259e808057bc8b74ecbc959b1367d04ed7e8d8026a5c8c32db708.json  query-a16e95057c823df7a04e06c1d07f28caf49922b51f5813f43eccdceb515f7b8f.json  query-ad601c5ed14969f3168fc4e6801a301a6c2229e1b5fa196bb60f367ca7635fe0.json  query-d7d31012a1895014466025e209c08f409fa359bd342eab4a951d0752ffa27217.json  query-e107440c0a9bee73d82bcf16334c2d1efc709e3f1fb041eef0934d50ad795989.json
server/config/: default.toml  override.example.toml
server/migrations/: 20250130160739_user.sql  20250219161345_auth.sql
server/src/: lib.rs  main.rs
server/src/config/: application.rs
server/src/dto/: auth.rs  health.rs  mod.rs  user.rs  wrapper.rs
server/src/error/: request.rs
server/src/extractor/: validation.rs
server/src/handler/: auth.rs  health.rs  metrics.rs  mod.rs  user.rs
server/src/metrics/: init.rs  mod.rs  request.rs  rss.rs
server/src/middleware/: request_tracker.rs
server/src/repository/: auth.rs  error.rs  user.rs
server/src/response/: api_response.rs
server/src/routes/: auth.rs  health.rs  metrics.rs  mod.rs  root.rs  user.rs
server/src/service/: auth.rs  error.rs  user.rs
server/src/state/: application.rs  auth.rs  database.rs  mod.rs  user.rs
server/tests/repository/: user.rs
