[package]
name = "hungry-mammoth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.2" }
config = { version = "0.15.6" }
metrics = { version = "0.24.1" }
metrics-exporter-prometheus = { version = "0.16.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.19" }
