[package]
name = "hungry-mammoth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.85" }
axum = { version = "0.8.2" }
config = { version = "0.15.6" }
dotenv = { version = "0.15.0" }
metrics = { version = "0.24.1" }
metrics-exporter-prometheus = { version = "0.16.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137" }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.19" }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.13.1"
